# sysprog

./: .gitignore  CMakeLists.txt  README.md  md5_bf.c
filestat/: README.md
include/: version.h
md5_bf/: CMakeLists.txt  README.md  md5_bf.c
md5_bf/include/: md5.h  ver.h.in  version.h
md5_bf/src/: CMakeLists.txt  md5.c
p2p_chat/: CMakeLists.txt  README.md
p2p_chat/inc/: Receiver.hh  Sender.hh  UdpSocket.hh
p2p_chat/src/: Receiver.cpp  Sender.cpp  main.cpp
src/: CMakeLists.txt
task1/: filestat  filestat.c
