CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(p2p_chat)

SET(CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(Threads)

INCLUDE_DIRECTORIES(inc)

file(GLOB 
          CPP_SOURCES "src/*.cpp")

ADD_EXECUTABLE(p2p_chat ${CPP_SOURCES})
TARGET_LINK_LIBRARIES(p2p_chat ${CMAKE_THREAD_LIBS_INIT})